# jarvis

./: .env.example  .gitignore  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  README.md  README_COMPLETE.md  instructions.md  monitor.py  pyproject.toml
jarvis/: __init__.py  main.py
jarvis/agents/: __init__.py  multi_agent_coordinator.py
jarvis/core/: __init__.py  engine.py  logging.py
jarvis/learning/: __init__.py  ai_decision_engine.py  background_optimizer.py  knowledge_base.py  learning_system.py  phase4_integration.py  predictive_analyzer.py
jarvis/memory/: __init__.py  memory.py  vector_memory.py
jarvis/modules/: __init__.py  coding_agent.py  research_agent.py  task_executor.py
jarvis/monitoring/: __init__.py  system_monitor.py
jarvis/self_improvement/: __init__.py  base.py  code_analyzer.py  deployment_planner.py  performance_monitor.py  refactor_engine.py  test_generator.py  workflow_builder.py
jarvis/voice/: __init__.py  speech_to_text.py  text_to_speech.py  voice_engine.py  wake_word.py
jarvis_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_memory.py  test_phase3_integration.py  test_phase4.py  test_self_improvement.py  test_voice.py
